--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
         </nav>
 
         <div class="content" data-template="home">
-          <canvas class="home__canvas"></canvas>
+          <!-- <canvas class="home__canvas"></canvas> -->
+
+          <lottie-player class="home__canvas"
+                  src="lotties/home.json" background="transparent" speed="1" loop autoplay>
+                </lottie-player>
+
 
           <section class="home">
             <div class="home__wrapper">
