--- a/index.html
+++ b/index.html
@@ -496,6 +496,13 @@
                   </a>
                 </div>
 
+                <div class="footer_logo2">
+                  <br>
+                <a href="./">
+                  <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
+                </a>
+                </div>
+
               </div>
 
               <div class="footer__email">
@@ -504,15 +511,17 @@
                 <a href="mailto:contact@fiveeyes.com.au" class="footer__label"
                   data-animation="paragraph">contact@fiveeyes.com.au</a>
 
-                <br><br>
+                <div class="footer_logo1">
+                  <br>
                 <a href="./">
                   <img src="./assets/logo.png" alt="Five Eyes Logo" class="navigation__logo__dark" />
                 </a>
+                </div>
 
               </div>
-
-
             </div>
+            
+            <p class="copyright">&copy; 2022 Five Eyes - All Rights Reserved</p>
           </footer>
         </div>
       </div>
